--- a/src/ASP.NET-Portfolio/project.json
+++ b/src/ASP.NET-Portfolio/project.json
@@ -8,7 +8,10 @@
     
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
-    "Microsoft.Extensions.Logging.Console": "1.0.0"
+    "Microsoft.Extensions.Logging.Console": "1.0.0",
+    "Microsoft.AspNetCore.Mvc": "1.0.0",
+    "RestSharp.NetCore": "105.2.3",
+    "Newtonsoft.Json":  "9.0.1"
   },
 
   "tools": {
